--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">WYSIWYG</string>
-    <string name="stringHeadline">headline              </string>
+    <string name="stringHeadline">heading</string>
     <string name="text_size">Text Size</string>
     <string name="text_color">Text Color</string>
     <string name="indentation">Indentation</string>
